feat: login endpoint
